@@ -64,7 +64,8 @@ setMethod(
 setMethod(
     f = "coef",
     signature = 'ConfirmatoryClass',
-    definition = function(object, rotate = '', Target = NULL, allpars = FALSE, digits = 3, ...)
+    definition = function(object, rotate = '', Target = NULL, allpars = FALSE, digits = 3, 
+                          verbose = TRUE, ...)
     {                             
         K <- object@K
         J <- length(K)
