@@ -95,7 +95,7 @@ setMethod(
 setMethod(
     f = "coef",
     signature = 'ExploratoryClass',
-    definition = function(object, rotate = '', Target = NULL, allpars = FALSE, digits = 3, ...){ 
+    definition = function(object, rotate = '', Target = NULL, allpars = FALSE, digits = 3, ...){        
         K <- object@K
         J <- length(K)
         nfact <- ncol(object@F)
@@ -116,22 +116,22 @@ setMethod(
             a <- round(a, digits)
             colnames(a) <- paste('a', 1:nfact, sep='')
         }
-        allPars <- list()
+        allPars <- list()        
         if(allpars){
             if(length(object@pars[[1]]@SEpar) > 0){
-                for(i in 1:J){
+                for(i in 1:(J+1)){
                     allPars[[i]] <- round(matrix(c(object@pars[[i]]@par, object@pars[[i]]@SEpar), 
                                                  2, byrow = TRUE), digits)
                     rownames(allPars[[i]]) <- c('pars', 'SE')
                     colnames(allPars[[i]]) <- names(object@pars[[i]]@parnum)
                 } 
             } else {
-                for(i in 1:J)
-                    allPars[[i]] <- round(object@pars[[i]]@par, digits)                
-            }       
-            names(allPars) <- rownames(a)
+                for(i in 1:(J+1))
+                    allPars[[i]] <- round(object@pars[[i]]@par, digits)
+            }                  
+            names(allPars) <- c(rownames(a), 'GroupPars')
         }        
-        ret <- if(allpars) allPars else a
+        ret <- if(allpars) return(allPars) else a
         if(nfact > 1) cat('\nRotation:', rotname, '\n\n')
         fcor <- 1
         if (ncol(a) > 1 && !allpars){
