@@ -4,7 +4,7 @@ test_that('dich', {
     data <- expand.table(LSAT7)        
     modm1 <- mirt(data, 1)
     modm2 <- mirt(data, 2)
-    modm3 <- mirt(data, 1, itemtype = 'Rasch')
+    modm3 <- mirt(data, 1, itemtype = 'Rasch', SE = FALSE)
     modm4 <- mirt(data, 1, itemtype = '1PL')    
     sv <- mirt(data,1, startvalues = 'index')
     fp <- mirt(data,1, freepars = 'index')
@@ -27,7 +27,7 @@ test_that('poly', {
     modp1 <- mirt(Science, 1)
     modp2 <- mirt(Science, 2)
     modp3 <- mirt(Science, 1, constrain = list(c(1,5)), parprior = list(c(2,'norm',0,1)))
-    modp4 <- mirt(Science, 1, itemtype = c(rep('graded',3), 'mcm'))
+    modp4 <- mirt(Science, 1, itemtype = c(rep('graded',3), 'mcm'), SE = FALSE)
     expect_is(modp1, 'ExploratoryClass')          
     expect_is(modp2, 'ExploratoryClass')
     expect_is(modp3, 'ExploratoryClass')
